<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding">


    <ImageView
        android:id="@+id/avator"
        android:layout_width="@dimen/avatar"
        android:layout_height="@dimen/avatar"
        android:contentDescription="@string/profile" />

    <TextView
        android:id="@+id/account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_padding"
        android:text="@string/app_name"
        android:textSize="@dimen/medium_text_size" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_padding"
        android:text="@string/logout"
        android:textSize="@dimen/small_text_size" />
</LinearLayout>