<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding">

    <ImageView
        android:id="@+id/widget_company_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_profile"
        android:contentDescription="@string/company"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_work_black_24px" />

    <TextView
        android:id="@+id/widget_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="@dimen/medium_text_size"
        tools:text="@string/add_widget" />


    <TextView
        android:id="@+id/widget_company_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="@dimen/small_text_size"
        tools:text="@string/app_name" />

</LinearLayout>