<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/medium_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/application_view_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium20_text_size"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/postiion"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/application_view_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium20_text_size"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/data"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/application_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium20_text_size"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/status"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/application_view_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium20_text_size"
            tools:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/comment"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/application_view_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium20_text_size"
            tools:text="@string/app_name" />

    </LinearLayout>
</LinearLayout>