<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:padding="@dimen/medium_padding">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/coach_avator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_background_height"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/coach"
            fresco:actualImageScaleType="fitCenter"
            fresco:placeholderImage="@drawable/ic_person_black_24px"
            fresco:placeholderImageScaleType="fitCenter"
            fresco:roundAsCircle="true" />

        <TextView
            android:id="@+id/coach_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coach_avator"
            android:layout_marginTop="@dimen/small_padding"
            android:gravity="center"
            android:textSize="@dimen/large_text_size"
            tools:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coach_name"
            android:layout_marginTop="@dimen/small_padding"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/small_padding"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/small_profile"
                    android:layout_height="@dimen/small_profile"
                    android:contentDescription="@string/rate"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_rate_review_white_24px" />

                <TextView
                    android:id="@+id/coach_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/small_padding"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/medium_text_size"
                    tools:text="@string/bio" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/small_padding"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/small_profile"
                    android:layout_height="@dimen/small_profile"
                    android:contentDescription="@string/rate"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_stars_white_24px" />

                <TextView
                    android:id="@+id/coach_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/small_padding"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/medium_text_size"
                    tools:text="@string/bio" />

                <ImageView
                    android:id="@+id/coach_like"
                    android:layout_width="@dimen/small_profile"
                    android:layout_height="@dimen/small_profile"
                    android:layout_marginStart="@dimen/small_padding"
                    android:contentDescription="@string/like"
                    android:src="@drawable/ic_favorite_white_24px" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="@dimen/medium_padding"
        android:paddingTop="@dimen/medium_padding"
        android:text="@string/bio"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/large_text_size" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginEnd="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_padding">

        <TextView
            android:id="@+id/coach_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_text_size"
            tools:text="@string/app_name" />
    </android.support.v7.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="@dimen/medium_padding"
        android:paddingTop="@dimen/medium_padding"
        android:text="@string/specialization"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/large_text_size" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginEnd="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_padding">

        <TextView
            android:id="@+id/coach_specializations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_text_size"
            tools:text="@string/app_name" />
    </android.support.v7.widget.CardView>
</LinearLayout>