<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/job_company_logo"
                    android:layout_width="@dimen/avatar"
                    android:layout_height="@dimen/avatar"
                    android:contentDescription="@string/work"
                    app:actualImageScaleType="fitCenter"
                    app:placeholderImage="@drawable/ic_business_black_24px"
                    app:placeholderImageScaleType="fitCenter" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/small_padding"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/job_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/medium20_text_size"
                        tools:text="@string/app_name" />

                    <ImageView
                        android:id="@+id/job_like"
                        android:layout_width="@dimen/small_profile"
                        android:layout_height="@dimen/small_profile"
                        android:contentDescription="@string/like"
                        android:src="@drawable/ic_favorite_black_24px" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/job_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_location_on_pink_24px"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    tools:text="@string/app_name" />

                <TextView
                    android:id="@+id/job_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/small_padding"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    tools:text="@string/app_name" />
            </LinearLayout>

            <TextView
                android:id="@+id/job_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:textColor="@android:color/black"
                android:textSize="@dimen/small_text_size"
                tools:text="@string/app_name" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>